correcciones 08-04
